%% ERD #5 — Bitemporal triple ↔ Visibility ↔ Snapshot
%% Source: crates/hkask-storage/src/{triples.rs, snapshot_writer.rs}
%% Realization: concept:bitemporal_triple → tech:hkask_storage
%%
%% Cardinality notes:
%%   * valid_time is the world time (when the fact is true);
%%     transaction_time is the system time (when the fact was stored).
%%     Both are datetime, not strings. (snapshot_writer.rs valid_from
%%     is DateTime<Utc> per the v6 fix.)
%%   * visibility ∈ {Private, Public, Shared}
%%     (crates/hkask-types/src/visibility.rs:32). Exactly 3 variants.
%%   * perspective ∈ {None, WebID}; an episodic triple has a
%%     perspective; a semantic triple does not.
%%   * A snapshot is a point-in-time projection across valid_time,
%%     filtered by visibility and (optionally) perspective.
%%   * The fixed API drift (v6): valid_from: DateTime<Utc>, not String;
%%     perspective() and visibility() are fields, not methods.

erDiagram
    TRIPLE ||--|| TEMPORAL : "valid_time + transaction_time"
    TRIPLE ||--|| ACCESS_CONTROL : "perspective + visibility + owner_webid"
    TRIPLE }o--o{ SNAPSHOT : "projects"
    ACCESS_CONTROL ||--|| VISIBILITY : "enums"
    ACCESS_CONTROL }o--o{ WEBID : "perspective (optional)"
    ACCESS_CONTROL }o--|| WEBID : "owner_webid"

    TRIPLE {
        string id
        string entity
        string attribute
        string value
        float confidence
    }
    TEMPORAL {
        datetime valid_from
        datetime valid_to "null = open-ended"
        datetime transaction_time "set by system at write"
    }
    ACCESS_CONTROL {
        WebID perspective "optional"
        Visibility visibility "Private | Public | Shared"
        WebID owner_webid
    }
    VISIBILITY {
        string variant "exactly 3"
    }
    SNAPSHOT {
        datetime as_of
        string filter
    }
    WEBID {
        string uri
    }
